--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,7 +1,6 @@
-google-genai>=0.12.0
-requests
-unidiff
-tenacity
-markdown
-google-generativeai
-jinja2
+google-generativeai==0.8.3
+requests==2.32.3
+unidiff==0.7.5
+tenacity==9.0.0
+markdown==3.7
+jinja2==3.1.4
