--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,24 @@
 
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+
 on: [push]
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: linux-runner
+
+    env:
+      # Confluence & Google API credentials (set these in Settings → Secrets)
+      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      CONF_DOMAIN:      ${{ secrets.CONF_DOMAIN }}
+      CONF_SPACE:       ${{ secrets.CONF_SPACE }}
+      CONF_USER:        ${{ secrets.CONF_USER }}
+      CONF_TOKEN:       ${{ secrets.CONF_TOKEN }}
+      PROJECT_NAME:     "MyProject"
+      CHANGELOG_FORMAT: "markdown"
+      STAGE_NAME:       "github-actions"
+
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -23,39 +37,39 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
-# name: Python application
+      # ——— new Python & Confluence steps below ———
 
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-# permissions:
-#   contents: read
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install google-generativeai requests jinja2 markdown tenacity
 
-# jobs:
-#   build:
+      - name: Gather commit metadata
+        id: metadata
+        run: |
+          echo "COMMIT_HASH=${GITHUB_SHA}" >> $GITHUB_ENV
+          echo "COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')" >> $GITHUB_ENV
 
-#     runs-on: ubuntu-latest
+          echo "COMMIT_MSG<<EOF" >> $GITHUB_ENV
+          git log -1 --pretty=%B >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Set up Python 3.10
-#       uses: actions/setup-python@v3
-#       with:
-#         python-version: "3.10"
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flake8 pytest
-#         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#     - name: Lint with flake8
-#       run: |
-#         # stop the build if there are Python syntax errors or undefined names
-#         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-#         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-#     - name: Test with pytest
-#       run: |
-#         pytest
+          echo "COMMIT_DIFF<<EOF" >> $GITHUB_ENV
+          git diff ${{ github.sha }}^! >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      - name: Run changelog agent
+        run: python agent.py
+
+      - name: Upload changelog artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: changelog
+          path: |
+            output/changelog.md
+            output/changelog.html
