--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,11 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
-on: [push]
+on:
+  push:
+    branches: [ '*' ]  # Trigger on push to any branch
+  pull_request:
+    types: [opened, synchronize, reopened, closed]  # Trigger on PR events
 
 jobs:
   Explore-GitHub-Actions:
@@ -20,13 +24,15 @@ jobs:
       CHANGELOG_FORMAT: "markdown"
       STAGE_NAME:       "github-actions"
       VERSION:          ${{ github.sha }}  # Using commit SHA as version
+      BRANCH_NAME:      ${{ github.ref_name }}  # Add branch name
+      EVENT_TYPE:       ${{ github.event_name }}  # Add event type (push/pull_request)
 
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: whoami
       - run: hostname
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "🔎 The name of your branch is ${{ github.ref_name }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
@@ -52,6 +58,8 @@ jobs:
         run: |
           echo "COMMIT_HASH=${GITHUB_SHA}" >> $GITHUB_ENV
           echo "COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          echo "EVENT_TYPE=${GITHUB_EVENT_NAME}" >> $GITHUB_ENV
 
           echo "COMMIT_MSG<<EOF" >> $GITHUB_ENV
           git log -1 --pretty=%B >> $GITHUB_ENV
